<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.fragments.ExitDialogFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/exit_confirmation"
            android:textColor="@color/dark"
            android:textSize="22sp"
            android:textStyle="bold"
            app:fontFamily="@font/ador" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/are_you_sure_about_exit"
            android:textColor="@color/dark"
            android:textSize="16sp"
            app:fontFamily="@font/ador" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragExitDialogCancelBtn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="@color/dark"
                app:fontFamily="@font/ador" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragExitDialogExitBtn"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/exit"
                app:backgroundTint="@color/secondary"
                app:fontFamily="@font/ador" />

        </LinearLayout>

    </LinearLayout>

</layout>