<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="6dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        tools:context=".ui.fragments.ReadingMenuFragment">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_margin="16dp"
            app:cardBackgroundColor="#CACACA"
            app:cardCornerRadius="2dp"
            app:cardElevation="0dp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/character_size"
                android:textColor="@color/dark"
                android:textSize="16sp"
                app:fontFamily="@font/ador"
                tools:ignore="RelativeOverlap" />

            <com.google.android.material.slider.Slider
                android:id="@+id/fragReadingMenuTextSizeSlider"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:stepSize="1.0"
                android:valueFrom="12.0"
                android:valueTo="36.0" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/line_height"
                android:textColor="@color/dark"
                android:textSize="16sp"
                app:fontFamily="@font/ador"
                tools:ignore="RelativeOverlap" />

            <com.google.android.material.slider.Slider
                android:id="@+id/fragReadingMenuLineHeightSlider"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:stepSize="2.0"
                android:valueFrom="60.0"
                android:valueTo="90" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragReadingMenuResetBtn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:text="@string/restore"
                app:fontFamily="@font/ador" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragReadingMenuCloseBtn"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/dismiss"
                app:fontFamily="@font/ador" />

        </LinearLayout>

    </LinearLayout>

</layout>