<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scrollbars="none"
        tools:context=".ui.activities.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/mainLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="24sp"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/round_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mainLastStoryBtn"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="@color/primary"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/eight_dp"
                        android:layout_marginBottom="@dimen/eight_dp"
                        android:gravity="bottom|start"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            app:srcCompat="@drawable/ic_fi_rr_arrow_right"
                            app:tint="@color/white" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/last_read_story"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            app:fontFamily="@font/ador" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mainNextStoryBtn"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="@color/primary"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/eight_dp"
                        android:layout_marginBottom="@dimen/eight_dp"
                        android:gravity="bottom|start"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            app:srcCompat="@drawable/ic_fi_rr_arrow_right"
                            app:tint="@color/white" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/read_next_story"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            app:fontFamily="@font/ador" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mainAllStoriesBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/secondary"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/all_stories"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:fontFamily="@font/ador" />

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:id="@+id/mrecContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical" />

        </LinearLayout>

    </ScrollView>

</layout>